--- a/plugin.xml
+++ b/plugin.xml
@@ -7,13 +7,13 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-emm-app-config"
-    version="1.1.2">
+    id="cordova-plugin-AppConfig"
+    version="1.1.3">
     <name>EmmAppConfig</name>
-    <description>Cordova EmmAppConfig Plugin</description>
+    <description>Cordova AppConfig.org Plugin</description>
     <license>UPL 1.0</license>
-    <keywords>cordova,emmappconfig</keywords>
-    <repo>https://github.com/oracle/cordova-plugin-emm-app-config.git</repo>
+    <keywords>cordova,emmappconfig,appconfig</keywords>
+    <repo>https://github.com/audioeng/cordova-plugin-emm-app-config.git</repo>
 
     <js-module src="www/emmappconfig.js" name="emmappconfig">
         <clobbers target="cordova.plugins.EmmAppConfig" />
